[project]
name = "sound-equilibrium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "comtypes>=1.4.16",
    "numpy>=2.4.6",
    "pyaudiowpatch>=0.2.12.8",
    "pycaw>=20251023",
    "pyside6>=6.11.1",
    "pyside6-fluent-widgets>=1.11.2",
]
